app/k8s/stg/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: example-app
  name: example-app
  namespace: stg
spec:
  type: ClusterIP
  ports:
  - name: "vader-ui"
    port: 5000
    targetPort: 5000
  selector:
    app: example-app
