app/k8s/stg/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-app
  namespace: stg
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: example-app.stg.steven.hopkins.rocks
      http:
        paths:
          - backend:
              serviceName: example-app
              servicePort: 5000
  tls:
    - hosts:
        - "example-app.stg.steven.hopkins.rocks"
      secretName: example-app-stg
